<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="repository"
            type="String" />

        <variable
            name="isDownloaded"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail">

        <TextView
            android:id="@+id/filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24"
            android:text="@string/file_name"
            android:textColor="@color/gray"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/repository_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:text="@{repository}"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/filename"
            app:layout_constraintTop_toTopOf="@id/filename" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24"
            android:text="@string/status"
            android:textColor="@color/gray"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repository_description" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{isDownloaded ? @string/success : @string/fail}"
            android:textColor="@{isDownloaded ? @color/colorPrimaryDark : @color/red}"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="@id/repository_description"
            app:layout_constraintStart_toStartOf="@id/repository_description"
            app:layout_constraintTop_toTopOf="@id/status" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24"
            android:backgroundTint="@color/colorAccent"
            android:padding="@dimen/margin_16"
            android:text="@string/button_name"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>